# Hello-World-from-Scratch

./: .gitignore  CMakeLists.txt  DootPsuedov1.md  FIXES_SUMMARY.md  LICENSE  Makefile  QUICK_SUMMARY.txt  README.md  TEST_REPORT.md  Testingasem.s  VERIFICATION_LOG.md  arm64-toolchain.cmake  assemble  create_disk.sh  linker.ld  main.cpp  main.s  skibidi.cpp  start.s  testingtwo.s  uart.c  uart.h
bootloader/: CMakeLists.txt  linker.ld  main.c  start.s
filesystem/fat/: CMakeLists.txt  fat.c  fat.h
filesystem/vio/: CMakeLists.txt  vio.c  vio.h
notes/kedar/: cmake.md  fat.md  linker.md  notes.md  virtio.md
notes/ved/: OS.md  ROOT.md  Uart.md  assembly.md  bss section.md  data section.md  dotsection.md  exceptions.md  fake hard drive.md  files.md  heap.md  linker for os stuff.md  memory ROOT.md  memory.md  partitions.md  qemu.md  reset.md  rodata section.md  stack.md  startup to boot.md  text section.md
notes/ved/.obsidian/: core-plugins.json  graph.json  workspace.json
os/: CMakeLists.txt  Makefile  linker.ld  main.c  start.s
scripts/: create_disk.sh  make_disk.sh
test_practice/: NotDootloaderpractice  Testingasem.s  testingtwo.s
tests/: .gitignore  Makefile  README.md  start.s  test.ld  test_fat.c  test_output.txt  test_uart.c  test_vio.c
uart/: CMakeLists.txt  uart.c  uart.h
